--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Profiles</title>
+  <!-- Import Sour Gummy font -->
+  <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
   <style>
-    /* Reset and base styles */
     * {
       margin: 0;
       padding: 0;
@@ -13,7 +14,7 @@
 
     html, body {
       height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Sour Gummy', sans-serif;
       overflow: hidden;
       color: white;
     }
@@ -62,7 +63,6 @@
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      border: 2px solid white;
       margin-bottom: 1rem;
     }
 
@@ -74,6 +74,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: animatedGradientText 6s ease infinite;
+      margin-bottom: 1rem;
     }
 
     @keyframes animatedGradientText {
@@ -81,18 +82,42 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
+
+    .discord-icon {
+      width: 24px;
+      height: 24px;
+      transition: filter 0.3s ease;
+    }
+
+    .riley-discord:hover .discord-icon,
+    .intallact-discord:hover .discord-icon {
+      filter: brightness(70%);
+    }
   </style>
 </head>
 <body>
 
   <div class="profile-container">
+    <!-- Riley Profile -->
     <div class="profile">
       <img src="https://cdn.discordapp.com/avatars/1142433636822548601/d0478937f9ceb8a9c22b3471115e6e96.png?size=512" alt="Riley">
       <h2>riley</h2>
+      <a href="https://discord.com/users/1142433636822548601" target="_blank" class="riley-discord">
+        <svg class="discord-icon" xmlns="http://www.w3.org/2000/svg" fill="#9863E7" viewBox="0 0 24 24">
+          <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.07.07 0 0 0-.074.035c-.21.375-.444.864-.608 1.249-1.844-.276-3.68-.276-5.486 0-.164-.398-.414-.874-.63-1.25a.07.07 0 0 0-.074-.034 19.736 19.736 0 0 0-4.885 1.515.064.064 0 0 0-.03.027C.533 9.047-.32 13.579.099 18.057a.082.082 0 0 0 .031.056 19.9 19.9 0 0 0 5.993 3.013.07.07 0 0 0 .078-.027c.462-.63.873-1.295 1.226-1.993a.07.07 0 0 0-.038-.098 13.107 13.107 0 0 1-1.872-.9.07.07 0 0 1-.007-.118c.126-.094.252-.19.374-.287a.07.07 0 0 1 .073-.01c3.927 1.793 8.18 1.793 12.061 0a.07.07 0 0 1 .074.009c.122.097.248.193.375.288a.07.07 0 0 1-.006.118 12.616 12.616 0 0 1-1.873.899.07.07 0 0 0-.038.099c.36.698.771 1.362 1.225 1.993a.07.07 0 0 0 .078.028 19.876 19.876 0 0 0 6.002-3.014.077.077 0 0 0 .031-.055c.5-5.177-.838-9.66-3.548-13.66a.061.061 0 0 0-.03-.027ZM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.174 1.094 2.157 2.418 0 1.334-.955 2.419-2.157 2.419Zm7.974 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.174 1.094 2.157 2.418 0 1.334-.947 2.419-2.157 2.419Z"/>
+        </svg>
+      </a>
     </div>
+
+    <!-- Intallact Profile -->
     <div class="profile">
       <img src="https://cdn.discordapp.com/avatars/1011756509501333532/7c4e9839401de126a50ca7a567dd27fd.png?size=512" alt="Intallact">
       <h2>Intallact</h2>
+      <a href="https://discord.com/users/1011756509501333532" target="_blank" class="intallact-discord">
+        <svg class="discord-icon" xmlns="http://www.w3.org/2000/svg" fill="#4498DB" viewBox="0 0 24 24">
+          <path d="M20.317 4.369a19.791 19.791 0 0 0-4.885-1.515.07.07 0 0 0-.074.035c-.21.375-.444.864-.608 1.249-1.844-.276-3.68-.276-5.486 0-.164-.398-.414-.874-.63-1.25a.07.07 0 0 0-.074-.034 19.736 19.736 0 0 0-4.885 1.515.064.064 0 0 0-.03.027C.533 9.047-.32 13.579.099 18.057a.082.082 0 0 0 .031.056 19.9 19.9 0 0 0 5.993 3.013.07.07 0 0 0 .078-.027c.462-.63.873-1.295 1.226-1.993a.07.07 0 0 0-.038-.098 13.107 13.107 0 0 1-1.872-.9.07.07 0 0 1-.007-.118c.126-.094.252-.19.374-.287a.07.07 0 0 1 .073-.01c3.927 1.793 8.18 1.793 12.061 0a.07.07 0 0 1 .074.009c.122.097.248.193.375.288a.07.07 0 0 1-.006.118 12.616 12.616 0 0 1-1.873.899.07.07 0 0 0-.038.099c.36.698.771 1.362 1.225 1.993a.07.07 0 0 0 .078.028 19.876 19.876 0 0 0 6.002-3.014.077.077 0 0 0 .031-.055c.5-5.177-.838-9.66-3.548-13.66a.061.061 0 0 0-.03-.027ZM8.02 15.331c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.174 1.094 2.157 2.418 0 1.334-.955 2.419-2.157 2.419Zm7.974 0c-1.183 0-2.157-1.085-2.157-2.419 0-1.333.955-2.418 2.157-2.418 1.21 0 2.174 1.094 2.157 2.418 0 1.334-.947 2.419-2.157 2.419Z"/>
+        </svg>
+      </a>
     </div>
   </div>
 
