--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ecstacy.shop</title>
+  <title>riley & intallact</title>
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
   <style>
     * {
@@ -98,12 +98,13 @@
       width: 24px;
       height: 24px;
       border-radius: 4px;
+      filter: brightness(0) invert(1);
       transition: filter 0.3s ease;
     }
 
     .riley a:hover img,
     .intallact a:hover img {
-      filter: brightness(70%) hue-rotate(20deg);
+      filter: brightness(0) invert(0.7);
     }
   </style>
 </head>
@@ -124,8 +125,8 @@
         <a href="https://guns.lol/riiley" target="_blank">
           <img src="https://assets.guns.lol/guns_logo_no_background_cropped.png" alt="Guns.lol">
         </a>
-        <a href="https://namemc.com/9om" target="_blank">
-          <img src="https://s.namemc.com/img/favicon-16.png" alt="NameMC">
+        <a href="https://laby.net/@9om" target="_blank">
+          <img src="https://laby.net/images/logo/logo.avif" alt="Laby">
         </a>
       </div>
     </div>
@@ -144,8 +145,8 @@
         <a href="https://github.com/intallact" target="_blank">
           <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub">
         </a>
-        <a href="https://namemc.com/Intallact" target="_blank">
-          <img src="https://s.namemc.com/img/favicon-16.png" alt="NameMC">
+        <a href="https://laby.net/@Intallact" target="_blank">
+          <img src="https://laby.net/images/logo/logo.avif" alt="Laby">
         </a>
       </div>
     </div>
