--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>riley & intallact</title>
+  <title>ecstacy.shop</title>
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
   <style>
     * {
@@ -35,11 +35,35 @@
       100% { background-position: 0% 50%; }
     }
 
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      backdrop-filter: blur(12px);
+      background: rgba(0, 0, 0, 0.4);
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2rem;
+      font-weight: bold;
+      cursor: pointer;
+      transition: opacity 0.5s ease;
+    }
+
+    .hidden {
+      opacity: 0;
+      pointer-events: none;
+    }
+
     .profile-container {
       display: flex;
       gap: 4rem;
       flex-wrap: wrap;
       justify-content: center;
+      pointer-events: none;
     }
 
     .profile {
@@ -110,7 +134,13 @@
 </head>
 <body>
 
-  <div class="profile-container">
+  <div class="overlay" onclick="enterSite()">click!</div>
+
+  <audio id="bgAudio" loop>
+    <source src="https://files.catbox.moe/bdao52.mp3" type="audio/mpeg">
+  </audio>
+
+  <div class="profile-container" id="content">
     <!-- Riley Profile -->
     <div class="profile riley">
       <img src="https://cdn.discordapp.com/avatars/1142433636822548601/d0478937f9ceb8a9c22b3471115e6e96.png?size=512" alt="Riley">
@@ -151,6 +181,16 @@
       </div>
     </div>
   </div>
+
+  <script>
+    function enterSite() {
+      document.querySelector('.overlay').classList.add('hidden');
+      const audio = document.getElementById('bgAudio');
+      audio.volume = 0.5;
+      audio.play().catch(e => console.log("Audio play blocked:", e));
+      document.getElementById('content').style.pointerEvents = 'auto';
+    }
+  </script>
 
 </body>
 </html>
