--- a/index.html
+++ b/index.html
@@ -2,227 +2,87 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>riley & intallact</title>
-  <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Riley | Profile</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    html, body {
-      height: 100%;
-      font-family: 'Sour Gummy', sans-serif;
-      overflow: hidden;
-      color: white;
-    }
-
+    /* Background */
     body {
-      background: linear-gradient(-45deg, #0f0c29, #302b63, #24243e, #1b1b1b);
-      background-size: 400% 400%;
-      animation: gradientBG 15s ease infinite;
+      margin: 0;
+      height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
-      gap: 2rem;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(-45deg, #ffd6e0, #cce6ff, #ffffff, #ffb3d9);
+      background-size: 400% 400%;
+      animation: gradientBG 15s ease infinite;
     }
-
     @keyframes gradientBG {
       0% { background-position: 0% 50%; }
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
 
-    .overlay {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+    /* Profile Card */
+    .card {
+      background: rgba(255, 255, 255, 0.15);
       backdrop-filter: blur(12px);
-      background: rgba(0, 0, 0, 0.4);
-      z-index: 9999;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: opacity 0.5s ease;
-    }
-
-    .hidden {
-      opacity: 0;
-      pointer-events: none;
-    }
-
-    .profile-container {
-      display: flex;
-      gap: 4rem;
-      flex-wrap: wrap;
-      justify-content: center;
-      pointer-events: none;
-    }
-
-    .profile {
-      background-color: rgba(255, 255, 255, 0.05);
-      border-radius: 16px;
-      padding: 2rem;
+      border-radius: 20px;
+      padding: 30px;
       text-align: center;
-      width: 200px;
-      backdrop-filter: blur(8px);
-      box-shadow: 0 0 30px rgba(0, 0, 0, 0.4);
-      transition: transform 0.3s ease;
-      position: relative;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      width: 300px;
     }
-
-    .profile:hover {
-      transform: translateY(-5px);
-    }
-
-    .profile img {
+    .pfp {
       width: 100px;
       height: 100px;
       border-radius: 50%;
-      margin-bottom: 1rem;
+      margin-bottom: 15px;
+      border: 3px solid white;
+    }
+    h2 {
+      margin: 0;
+      font-size: 1.5em;
+      color: #333;
+    }
+    p {
+      margin: 5px 0 20px;
+      color: #444;
     }
 
-    .profile h2 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      background: linear-gradient(270deg, #9863E7, #4498DB);
-      background-size: 400% 400%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: animatedGradientText 6s ease infinite;
-      margin-bottom: 1rem;
-    }
-
-    .status-dot {
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
-
-    .social-icons {
+    /* Social Buttons */
+    .socials {
       display: flex;
       justify-content: center;
-      gap: 10px;
-      margin-top: 0.5rem;
+      gap: 15px;
       flex-wrap: wrap;
     }
-
-    .social-icons a {
+    .socials a {
+      background: rgba(255, 255, 255, 0.3);
+      color: #333;
+      padding: 10px;
+      border-radius: 50%;
+      font-size: 20px;
       text-decoration: none;
-      display: inline-block;
+      transition: all 0.3s;
     }
-
-    .social-icons img {
-      width: 24px;
-      height: 24px;
-      border-radius: 4px;
-      filter: brightness(0) invert(1);
-      transition: filter 0.3s ease;
-    }
-
-    .riley a:hover img,
-    .intallact a:hover img {
-      filter: brightness(0) invert(0.7);
+    .socials a:hover {
+      background: rgba(255, 255, 255, 0.6);
+      transform: scale(1.1);
     }
   </style>
 </head>
 <body>
-
-  <div class="overlay" onclick="enterSite()">click!</div>
-
-  <audio id="bgAudio" loop>
-    <source src="https://files.catbox.moe/bdao52.mp3" type="audio/mpeg">
-  </audio>
-
-  <div class="profile-container" id="content">
-    <!-- Riley Profile -->
-    <div class="profile riley">
-      <div class="status-dot" id="status-riley"></div>
-      <img src="https://cdn.discordapp.com/avatars/1142433636822548601/d0478937f9ceb8a9c22b3471115e6e96.png?size=512" alt="Riley">
-      <h2>riley</h2>
-      <div class="social-icons">
-        <a href="https://discord.com/users/1142433636822548601" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord">
-        </a>
-        <a href="https://github.com/rileysk" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub">
-        </a>
-        <a href="https://guns.lol/riiley" target="_blank">
-          <img src="https://assets.guns.lol/guns_logo_no_background_cropped.png" alt="Guns.lol">
-        </a>
-        <a href="https://laby.net/@9om" target="_blank">
-          <img src="https://laby.net/images/logo/logo.avif" alt="Laby">
-        </a>
-      </div>
-    </div>
-
-    <!-- Intallact Profile -->
-    <div class="profile intallact">
-      <div class="status-dot" id="status-intallact"></div>
-      <img src="https://cdn.discordapp.com/avatars/1011756509501333532/7c4e9839401de126a50ca7a567dd27fd.png?size=512" alt="Intallact">
-      <h2>Intallact</h2>
-      <div class="social-icons">
-        <a href="https://discord.com/users/1011756509501333532" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/discord.svg" alt="Discord">
-        </a>
-        <a href="https://www.youtube.com/@zrapid" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/youtube.svg" alt="YouTube">
-        </a>
-        <a href="https://github.com/intallact" target="_blank">
-          <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub">
-        </a>
-        <a href="https://laby.net/@Intallact" target="_blank">
-          <img src="https://laby.net/images/logo/logo.avif" alt="Laby">
-        </a>
-      </div>
+  <div class="card">
+    <img src="https://spyglass.rest/975743e175494ac2451d000b0f1981c8.png" alt="Profile Picture" class="pfp">
+    <h2>Riley</h2>
+    <p>silly meow cat girl :3</p>
+    <div class="socials">
+      <a href="https://discord.com/users/1142433636822548601" target="_blank"><i class="fab fa-discord"></i></a>
+      <a href="https://soundcloud.com/rileykittycat" target="_blank"><i class="fab fa-soundcloud"></i></a>
+      <a href="https://github.com/rileyowu" target="_blank"><i class="fab fa-github"></i></a>
     </div>
   </div>
-
-  <script>
-    function enterSite() {
-      document.querySelector('.overlay').classList.add('hidden');
-      const audio = document.getElementById('bgAudio');
-      audio.volume = 0.5;
-      audio.play().catch(e => console.log("Audio play blocked:", e));
-      document.getElementById('content').style.pointerEvents = 'auto';
-    }
-
-    async function updateStatus(userId, elementId) {
-      try {
-        const res = await fetch(`https://api.lanyard.rest/v1/users/${userId}`);
-        const data = await res.json();
-        const status = data.data.discord_status;
-        const el = document.getElementById(elementId);
-        const colors = {
-          online: 'lime',
-          dnd: 'red',
-          idle: 'orange',
-          offline: 'gray',
-          invisible: 'gray'
-        };
-        el.style.backgroundColor = colors[status] || 'gray';
-      } catch (e) {
-        console.error("Failed to fetch status for", userId);
-      }
-    }
-
-    updateStatus("1142433636822548601", "status-riley");
-    updateStatus("1011756509501333532", "status-intallact");
-    setInterval(() => {
-      updateStatus("1142433636822548601", "status-riley");
-      updateStatus("1011756509501333532", "status-intallact");
-    }, 10000);
-  </script>
-
 </body>
 </html>
